--- a/Tidyverse.qmd
+++ b/Tidyverse.qmd
@@ -7,5 +7,6 @@ title: "Tidyverse"
 Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
 
 ```{r}
-1 + 1
+
+ddfgd
 ```
